# simd

./: CMakeLists.txt  LICENSE  README  README.md  simd.h  simd_data_types.h  simd_default_backend.h  simd_godbolt_default.h  simd_godbolt_sse.h  simd_mask_unit_test.cpp  simd_sse_backend.h
include/: simd.h
include/detail/: simd_data_types.h  simd_default_backend.h  simd_math.h  simd_sse_backend.h  utilities.h
test/: simd_mask_unit_test.cpp  simd_math_unit_test.cpp  simd_unit_test.cpp
